--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,5 +1,6 @@
 brands:
-
+- name: swiftcfd
+  config_file: swiftcfd.yml
 - name: goldenmarkets
   config_file: goldenmarkets.yml
 - name: safemarkets
