--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -3,12 +3,12 @@ tests_config:
 - module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
   class: FilterModulesTest
   tests:
-  - test_create_filter_clients_module
-  - test_create_filter_documents_module
-  - test_create_filter_leads_module
-  - test_create_filter_help_desk
-  - test_create_filter_trading_account_module
-##  #Leads
+    - test_create_filter_clients_module
+    - test_create_filter_documents_module
+    - test_create_filter_leads_module
+    - test_create_filter_help_desk
+    - test_create_filter_trading_account_module
+#  #Leads
 - module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
   class: TabLeadsModuleCRM
   tests:
@@ -29,7 +29,7 @@ tests_config:
 #    - test_export_financial_transactions_csv
 #    - test_export_financial_transactions_xls
 
-#  #General
+##  #General
 - module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
   directive: reload_configuration
   class: LeadModuleTest
@@ -78,20 +78,20 @@ tests_config:
   class: TradingAccountCrmTest
   tests:
     - test_crm_edit_trading_account  # edit trading account
-
+#
 - module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Calendar_View
   class: CalendarView
   tests:
     - test_check_day_tab
     - test_check_week_tab
     - test_check_month_tab
-     - test_check_add_tasks_calendar_view
-
-#- module: src.test.python.ui.automation.implementation.crm.tests_document_module.Create_Documents
-#  class: CreateDocument
-#  tests:
-#    - test_create_documents
-
+    - test_check_add_tasks_calendar_view
+#
+##- module: src.test.python.ui.automation.implementation.crm.tests_document_module.Create_Documents
+##  class: CreateDocument
+##  tests:
+##    - test_create_documents
+#
 - module: src.test.python.ui.automation.implementation.crm.tests_affiliates_module.Test_Affiliates_Module
   class: AffiliateModule
   tests:
