NF_add_new_tests: changed for new brands

--- a/src/test/python/resources/config/brands2.yml
+++ b/src/test/python/resources/config/brands2.yml
@@ -8,3 +8,7 @@ brands:
   config_file: alphabetfx.yml
 - name: kbcapitals
   config_file: kbcapitals.yml
+#- name: itrader-il
+#  config_file: itrader-il.yml
+- name: gmo-dev
+  config_file: gmo-dev.yml
