--- a/src/test/python/resources/config/brands4.yml
+++ b/src/test/python/resources/config/brands4.yml
@@ -8,3 +8,5 @@ brands:
   config_file: urf_financial.yml
 - name: gmo
   config_file: gmo.yml
+#- name: capitalmarketsbanc
+#  config_file: capitalmarketsbanc.yml
