--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,5 +1,6 @@
 tests_config:
 
+  #General
 - module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
   class: FilterModulesTest
   tests:
@@ -8,7 +9,7 @@ tests_config:
     - test_create_filter_leads_module
     - test_create_filter_help_desk
     - test_create_filter_trading_account_module
-#  #Leads
+##  #Leads
 - module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
   class: TabLeadsModuleCRM
   tests:
@@ -19,22 +20,12 @@ tests_config:
   tests:
     - test_create_lead   # Creates and lead. Included in the test_searching_lead_modules test
     - test_edit_lead
-
-- module: src.test.python.ui.automation.implementation.crm.tests_financial_transactions.Test_Tab_Financial_Transaction_Module
-  class: TabFinancialTransaction
-  tests:
-    - test_check_all_tab_from_financial_transactions
-    - test_check_searching_by_column # Check filters in columns -  all required columns (customer name, date, transaction type, trading account number, transaction number)
-    - test_check_search_via_button
-#    - test_export_financial_transactions_csv
-#    - test_export_financial_transactions_xls
-
-##  #General
 - module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
   directive: reload_configuration
   class: LeadModuleTest
   tests:
     - test_perform_convert_lead   # Creates a lead and converts it to a client
+#####Clients
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Searching_Clients
   class: SearchingClientsTestCRM
   tests:
@@ -67,32 +58,38 @@ tests_config:
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Deposit
   class: DepositTestCRM
   tests:
-    - test_make_deposit_crm  # make a deposit into a trading account from the crm (make live account)
-    - test_make_deposit_for_client_crm #needed live account
+    - test_make_deposit_crm  # make a deposit into a trading account from the crm
+    - test_make_deposit_for_client_crm
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Credit_In
   class: CreditInTestCRM
   tests:
     - test_make_credit_in_from_crm
-
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
   class: TradingAccountCrmTest
   tests:
     - test_crm_edit_trading_account  # edit trading account
 
-- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Calendar_View
-  class: CalendarView
-  tests:
-    - test_check_day_tab
-    - test_check_week_tab
-    - test_check_month_tab
-    - test_check_add_tasks_calendar_view
-#
-##- module: src.test.python.ui.automation.implementation.crm.tests_document_module.Create_Documents
-##  class: CreateDocument
-##  tests:
-##    - test_create_documents
-#
 - module: src.test.python.ui.automation.implementation.crm.tests_affiliates_module.Test_Affiliates_Module
   class: AffiliateModule
   tests:
      - test_create_affiliate
+- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Calendar_View
+  class: CalendarView
+  tests:
+     - test_check_add_tasks_calendar_view #preconditions convert lead
+     - test_check_day_tab
+     - test_check_month_tab
+     - test_check_week_tab
+- module: src.test.python.ui.automation.implementation.crm.tests_financial_transactions.Test_Tab_Financial_Transaction_Module
+  class: TabFinancialTransaction
+  tests:
+    - test_check_all_tab_from_financial_transactions
+    - test_check_searching_by_column # Check filters in columns -  all required columns (customer name, date, transaction type, trading account number, transaction number)
+    - test_check_search_via_button # Check search using search button
+#    - test_export_financial_transactions_csv
+#    - test_export_financial_transactions_xls
+
+#- module: src.test.python.ui.automation.implementation.crm.tests_document_module.Create_Documents
+#  class: CreateDocument
+#  tests:
+#    - test_create_documents
