--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -25,7 +25,7 @@ tests_config:
   class: LeadModuleTest
   tests:
     - test_perform_convert_lead   # Creates a lead and converts it to a client
-######Clients
+#####Clients
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Searching_Clients
   class: SearchingClientsTestCRM
   tests:
@@ -63,32 +63,33 @@ tests_config:
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Credit_In
   class: CreditInTestCRM
   tests:
-#    - test_make_credit_in_crm # Test was commented because it needs Client Area functionality but now CA is not configured
     - test_make_credit_in_from_crm
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
   class: TradingAccountCrmTest
   tests:
     - test_crm_edit_trading_account  # edit trading account
+
+- module: src.test.python.ui.automation.implementation.crm.tests_affiliates_module.Test_Affiliates_Module
+  class: AffiliateModule
+  tests:
+     - test_create_affiliate
 - module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Calendar_View
   class: CalendarView
   tests:
-    - test_check_day_tab
-    - test_check_week_tab
-    - test_check_month_tab
-    - test_check_add_tasks_calendar_view #preconditions convert lead
+     - test_check_add_tasks_calendar_view #preconditions convert lead
+     - test_check_day_tab
+     - test_check_month_tab
+     - test_check_week_tab
 - module: src.test.python.ui.automation.implementation.crm.tests_financial_transactions.Test_Tab_Financial_Transaction_Module
   class: TabFinancialTransaction
   tests:
     - test_check_all_tab_from_financial_transactions
     - test_check_searching_by_column # Check filters in columns -  all required columns (customer name, date, transaction type, trading account number, transaction number)
     - test_check_search_via_button # Check search using search button
-#     - test_export_financial_transactions_csv
-#     - test_export_financial_transactions_xls
+#    - test_export_financial_transactions_csv
+#    - test_export_financial_transactions_xls
+
 #- module: src.test.python.ui.automation.implementation.crm.tests_document_module.Create_Documents
 #  class: CreateDocument
 #  tests:
 #    - test_create_documents
-- module: src.test.python.ui.automation.implementation.crm.tests_affiliates_module.Test_Affiliates_Module
-  class: AffiliateModule
-  tests:
-     - test_create_affiliate
