OF_change_report_send_email: add class SendMail, change Excel Writer for sending email

--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,12 +1,14 @@
 brands:
-- name: swiftcfd
-  config_file: swiftcfd.yml
-- name: goldenmarkets
-  config_file: goldenmarkets.yml
-- name: safemarkets
-  config_file: safemarkets.yml
-- name: optionstars
-  config_file: optionstars.yml
+- name: bots
+  config_file: bots.yml
+#- name: swiftcfd
+#  config_file: swiftcfd.yml
+#- name: goldenmarkets
+#  config_file: goldenmarkets.yml
+#- name: safemarkets
+#  config_file: safemarkets.yml
+#- name: optionstars
+#  config_file: optionstars.yml
 
 
 
