--- a/src/test/python/resources/config/brands4.yml
+++ b/src/test/python/resources/config/brands4.yml
@@ -2,11 +2,15 @@ brands:
 
 - name: rimarkets
   config_file: rimarkets.yml
-- name: kayafx
-  config_file: kaya_fx.yml
-- name: urf
-  config_file: urf_financial.yml
-- name: gmo
-  config_file: gmo.yml
+- name: brokerxp
+  config_file: brokerxp.yml
+- name: finmarket
+  config_file: finmarket.yml
+#- name: kayafx
+#  config_file: kaya_fx.yml
+#- name: urf
+#  config_file: urf_financial.yml
+#- name: gmo
+#  config_file: gmo.yml
 #- name: capitalmarketsbanc
 #  config_file: capitalmarketsbanc.yml
