OF_change_report_send_email: add class SendMail, change Excel Writer for sending email

--- a/src/test/python/resources/config/brands10.yml
+++ b/src/test/python/resources/config/brands10.yml
@@ -1,8 +1,8 @@
 brands:
 
-- name: kontofx
-  config_file: kontofx.yml
-- name: xtraderfx
-  config_file: xtraderfx.yml
+#- name: kontofx
+#  config_file: kontofx.yml
+#- name: xtraderfx
+#  config_file: xtraderfx.yml
 - name: 2mercados
   config_file: 2mercados.yml
