--- a/src/test/python/resources/config/brands7.yml
+++ b/src/test/python/resources/config/brands7.yml
@@ -2,7 +2,7 @@ brands:
 
 - name: newrichmarkets
   config_file: newrichmarkets.yml
-- name: swiftcfd
-  config_file: swiftcfd.yml
-- name: tfxgo
-  config_file: tfxgo.yml
+#- name: swiftcfd
+#  config_file: swiftcfd.yml
+#- name: tfxgo
+#  config_file: tfxgo.yml
