--- a/src/test/python/resources/config/brands2.yml
+++ b/src/test/python/resources/config/brands2.yml
@@ -2,10 +2,10 @@ brands:
 
 - name: 4xfx
   config_file: 4xfx.yml
-- name: ptbanc
-  config_file: ptbanc.yml
-- name: q8
-  config_file: q8.yml
+#- name: ptbanc
+#  config_file: ptbanc.yml
+#- name: q8
+#  config_file: q8.yml
 
 
 
