NF_add_new_report: changed for new report

--- a/src/test/python/resources/config/brands4.yml
+++ b/src/test/python/resources/config/brands4.yml
@@ -6,11 +6,6 @@ brands:
   config_file: brokerxp.yml
 - name: finmarket
   config_file: finmarket.yml
-#- name: kayafx
-#  config_file: kaya_fx.yml
-#- name: urf
-#  config_file: urf_financial.yml
-#- name: gmo
-#  config_file: gmo.yml
-#- name: capitalmarketsbanc
-#  config_file: capitalmarketsbanc.yml
+- name: kayafx
+  config_file: kaya_fx.yml
+
