--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -4,8 +4,8 @@ brands:
   config_file: triomarkets.yml
 - name: ogtrade
   config_file: ogtrade.yml
-#- name: fm-fx
-#  config_file: fm-fx.yml
+- name: fm-fx
+  config_file: fm-fx.yml
 - name: mlnfx
   config_file: mlnfx.yml
 
