NF_add_new_report: changed for new report

--- a/src/test/python/resources/config/brands12.yml
+++ b/src/test/python/resources/config/brands12.yml
@@ -2,7 +2,7 @@ brands:
 
 - name: tradospot
   config_file: tradospot.yml
-#- name: eu4xsolutions
-#  config_file: eu4xsolutions.yml
-#- name: mpcrypto
-#  config_file: mpcrypto.yml
+- name: eu4xsolutions
+  config_file: eu4xsolutions.yml
+- name: mpcrypto
+  config_file: mpcrypto.yml
