--- a/src/test/python/resources/config/brands3.yml
+++ b/src/test/python/resources/config/brands3.yml
@@ -2,10 +2,10 @@ brands:
 
 - name: axa_markets
   config_file: axa_markets.yml
-#- name: aztrades
-#  config_file: aztrades.yml
-#- name: bots
-#  config_file: bots.yml
+- name: aztrades
+  config_file: aztrades.yml
+- name: bots
+  config_file: bots.yml
 
 
 
