--- a/src/test/python/resources/config/brands6.yml
+++ b/src/test/python/resources/config/brands6.yml
@@ -4,3 +4,5 @@ brands:
   config_file: forexbestmarket.yml
 - name: marketsplus
   config_file: marketsplus.yml
+- name: optionstars
+  config_file: optionstars.yml
