NF_add_new_report: changed for new report

--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -2,12 +2,12 @@ brands:
 
 - name: triomarkets
   config_file: triomarkets.yml
-#- name: ogtrade
-#  config_file: ogtrade.yml
-#- name: fm-fx
-#  config_file: fm-fx.yml
-#- name: mlnfx
-#  config_file: mlnfx.yml
+- name: ogtrade
+  config_file: ogtrade.yml
+- name: fm-fx
+  config_file: fm-fx.yml
+- name: mlnfx
+  config_file: mlnfx.yml
 
 
 
