NF_add_new_report: changed for new report

--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -2,9 +2,9 @@ brands:
 
 - name: fxpmarkets
   config_file: fxpmarkets.yml
-- name: soarfx
-  config_file: soarfx.yml
-- name: highfx
-  config_file: highfx.yml
-- name: urf
-  config_file: urf_financial.yml
+#- name: soarfx
+#  config_file: soarfx.yml
+#- name: highfx
+#  config_file: highfx.yml
+#- name: urf
+#  config_file: urf_financial.yml
