NF_add_new_report: changed for new report

--- a/src/test/python/resources/config/brands2.yml
+++ b/src/test/python/resources/config/brands2.yml
@@ -1,11 +1,6 @@
 brands:
 
-
-- name: stoxmarket
-  config_file: stoxmarket.yml
-#- name: kbcapitals
-#  config_file: kbcapitals.yml
-#- name: 24fxm
-#  config_file: 24fxm.yml
-#- name: gmo
-#  config_file: gmo.yml
+- name: 24fxm
+  config_file: 24fxm.yml
+- name: gmo
+  config_file: gmo.yml
