OF_change_report_send_email: add changes to SendMail

--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -1,7 +1,7 @@
 brands:
 
-#- name: royal_cfds
-#  config_file: royal_cfds.yml
+- name: royal_cfds
+  config_file: royal_cfds.yml
 #- name: jonesmutual
 #  config_file: jonesmutual.yml
 #- name: forexbestmarket
