NF_add_new_report: changed for new report

--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -2,5 +2,5 @@ brands:
 
 - name: highfx
   config_file: highfx.yml
-#- name: urf
-#  config_file: urf_financial.yml
+- name: urf
+  config_file: urf_financial.yml
