NF_add_new_report: changed for new report

--- a/src/test/python/resources/config/brands10.yml
+++ b/src/test/python/resources/config/brands10.yml
@@ -1,7 +1,7 @@
 brands:
 
-- name: kontofx
-  config_file: kontofx.yml
+#- name: kontofx
+#  config_file: kontofx.yml
 - name: xtraderfx
   config_file: xtraderfx.yml
 - name: 2mercados
