--- a/src/test/python/resources/config/brands13.yml
+++ b/src/test/python/resources/config/brands13.yml
@@ -2,7 +2,7 @@ brands:
 
 - name: royal_cfds
   config_file: royal_cfds.yml
-- name: uprofx
-  config_file: uprofx.yml
+#- name: uprofx
+#  config_file: uprofx.yml
 - name: swisscci
   config_file: swisscci.yml
