--- a/src/test/python/resources/config/brands9.yml
+++ b/src/test/python/resources/config/brands9.yml
@@ -4,5 +4,5 @@ brands:
   config_file: herdos.yml
 - name: hizlifx
   config_file: hizlifx.yml
-- name: libramarkets
-  config_file: libramarkets.yml
+#- name: libramarkets
+#  config_file: libramarkets.yml
