NF_add_new_report: changed for new report

--- a/src/main/python/ui/crm/model/BrandsXpath/coinstec_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/coinstec_xpath.yml
@@ -15,3 +15,11 @@ FinancialTransactionsPage:
   modified_time_element: "(//*[@id='listBody']//tr/td[8])[%s]"
 ClientProfilePage:
   deposit_sum: "//tr[@class='lvtColData'][1]//td[3]"
+AffiliatePage:
+  countrys: "//span[@class = 'hovered-option'][contains(text(),'%s')]"
+  methods: "//span[@class = 'hovered-option ng-star-inserted'][contains(text(),'%s')]"
+  button_plus: "/html/body/bs-modal[3]/div/div/form/bs-modal-body/div/div[3]/button"
+  methods_drop_down: "/html/body/bs-modal[3]/div/div/form/bs-modal-body/div/div[5]/div[2]"
+  input_methods: "/html/body/bs-modal[3]/div/div/form/bs-modal-body/div/div[5]/div[2]/filter-multi-select/div/div[2]/span[1]/input"
+  blocked_country_drop_down: "/html/body/bs-modal[3]/div/div/form/bs-modal-body/div/div[6]/div[2]"
+  input_country: "/html/body/bs-modal[3]/div/div/form/bs-modal-body/div/div[6]/div[2]/filter-multi-select/div/div[2]/span[1]/input"
