--- a/src/main/python/ui/crm/model/BrandsXpath/firstindex_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/firstindex_xpath.yml
@@ -5,3 +5,11 @@ FinancialTransactionsPage:
   transaction_type_drop_down: "//td[5]/div/div[1]/button"
   trading_account_element: "(//*[@id='listBody']//tr/td[11])[%s]//a"
   modified_time_element: "(//*[@id='listBody']//tr/td[3])[%s]"
+AffiliatePage:
+  countrys: "//span[@class = 'hovered-option'][contains(text(),'%s')]"
+  methods: "//span[@class = 'hovered-option ng-star-inserted'][contains(text(),'%s')]"
+  button_plus: "/html/body/bs-modal[3]/div/div/form/bs-modal-body/div/div[3]/button"
+  methods_drop_down: "/html/body/bs-modal[3]/div/div/form/bs-modal-body/div/div[5]/div[2]"
+  input_methods: "/html/body/bs-modal[3]/div/div/form/bs-modal-body/div/div[5]/div[2]/filter-multi-select/div/div[2]/span[1]/input"
+  blocked_country_drop_down: "/html/body/bs-modal[3]/div/div/form/bs-modal-body/div/div[6]/div[2]"
+  input_country: "/html/body/bs-modal[3]/div/div/form/bs-modal-body/div/div[6]/div[2]/filter-multi-select/div/div[2]/span[1]/input"
