OF: changes by 12-18

--- a/src/test/python/resources/config/brands2.yml
+++ b/src/test/python/resources/config/brands2.yml
@@ -1,6 +1,8 @@
 brands:
 
-#- name: 24fxm
-#  config_file: 24fxm.yml
-- name: gmo
-  config_file: gmo.yml
+#- name: gmo
+#  config_file: gmo.yml
+- name: oinvestsa
+  config_file: oinvestsa.yml
+- name: triomarkets
+  config_file: triomarkets.yml
