--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -5,8 +5,8 @@ tests_config:
   class: FilterModulesTest
   tests:
     - test_create_filter_clients_module
-    - test_create_filter_documents_module
-    - test_create_filter_leads_module
+#    - test_create_filter_documents_module
+#    - test_create_filter_leads_module
 #    - test_create_filter_help_desk
 #    - test_create_filter_trading_account_module
 ###  #Leads
