--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -5,15 +5,15 @@ tests_config:
   class: FilterModulesTest
   tests:
     - test_create_filter_clients_module
-#    - test_create_filter_documents_module
-#    - test_create_filter_leads_module
-#    - test_create_filter_help_desk
-#    - test_create_filter_trading_account_module
-###  #Leads
-#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
-#  class: TabLeadsModuleCRM
-#  tests:
-#    - test_searching_lead_modules   # Creates a new lead and searches it. Validates that only one result is returned.
+    - test_create_filter_documents_module
+    - test_create_filter_leads_module
+    - test_create_filter_help_desk
+    - test_create_filter_trading_account_module
+##  #Leads
+- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
+  class: TabLeadsModuleCRM
+  tests:
+    - test_searching_lead_modules   # Creates a new lead and searches it. Validates that only one result is returned.
 #- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
 #  directive: reload_configuration
 #  class: LeadModuleTest
