--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -5,15 +5,15 @@ tests_config:
   class: FilterModulesTest
   tests:
     - test_create_filter_clients_module
-    - test_create_filter_documents_module
-    - test_create_filter_leads_module
-    - test_create_filter_help_desk
-    - test_create_filter_trading_account_module
-##  #Leads
-- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
-  class: TabLeadsModuleCRM
-  tests:
-    - test_searching_lead_modules   # Creates a new lead and searches it. Validates that only one result is returned.
+#    - test_create_filter_documents_module
+#    - test_create_filter_leads_module
+#    - test_create_filter_help_desk
+#    - test_create_filter_trading_account_module
+###  #Leads
+#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
+#  class: TabLeadsModuleCRM
+#  tests:
+#    - test_searching_lead_modules   # Creates a new lead and searches it. Validates that only one result is returned.
 #- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
 #  directive: reload_configuration
 #  class: LeadModuleTest
@@ -55,10 +55,10 @@ tests_config:
 #  tests:
 #    - test_change_client_password_from_crm  # change a client account password from the crm
 #    - test_change_mt4_password_from_crm  # change an MT4 account password from the crm
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Deposit
-#  class: DepositTestCRM
-#  tests:
-#    - test_make_deposit_crm  # make a deposit into a trading account from the crm
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Deposit
+  class: DepositTestCRM
+  tests:
+    - test_make_deposit_crm  # make a deposit into a trading account from the crm
 #    - test_make_deposit_for_client_crm
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Credit_In
 #  class: CreditInTestCRM
