OF_change_report_send_email: add video + one big test + comment to test

--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -4,8 +4,8 @@ brands:
 #  config_file: swiftcfd.yml
 #- name: goldenmarkets
 #  config_file: goldenmarkets.yml
-#- name: safemarkets
-#  config_file: safemarkets.yml
+- name: safemarkets
+  config_file: safemarkets.yml
 
 
 
@@ -13,8 +13,8 @@ brands:
 #  config_file: b-finance.yml
 #- name: eafx
 #  config_file: eafx.yml
-- name: gxfx
-  config_file: gxfx.yml
+#- name: gxfx
+#  config_file: gxfx.yml
 
 
 
