--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -1,5 +1,11 @@
 brands:
 
+##CA
+#- name: royal_cfds_ca
+#  config_file: royal_cfd_ca.yml
+
+
+
 #- name: royal_cfds
 #  config_file: royal_cfds.yml
 #- name: jonesmutual
@@ -73,6 +79,9 @@ brands:
 #  config_file: tfxgo.yml
 #- name: uprofx
 #  config_file: uprofx.yml
+
+
+
 
 
 
