--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,11 +1,14 @@
 brands:
 
+- name: royal_cfds_ca
+  config_file: royal_cfd_ca.yml
+
 #- name: swiftcfd
 #  config_file: swiftcfd.yml
 #- name: goldenmarkets
 #  config_file: goldenmarkets.yml
-- name: safemarkets
-  config_file: safemarkets.yml
+#- name: safemarkets
+#  config_file: safemarkets.yml
 
 
 
