--- a/src/main/python/ui/crm/model/BrandsXpath/default.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/default.yml
@@ -30,3 +30,7 @@ AffiliatePage:
   input_methods: "/html/body/bs-modal[2]/div/div/form/bs-modal-body/div/div[5]/div[2]/filter-multi-select/div/div[2]/span[1]/input"
   blocked_country_drop_down: "/html/body/bs-modal[2]/div/div/form/bs-modal-body/div/div[6]/div[2]"
   input_country: "/html/body/bs-modal[2]/div/div/form/bs-modal-body/div/div[6]/div[2]/filter-multi-select/div/div[2]/span[1]/input"
+CALoginPage:
+  sign_up: "//button[contains(text(), 'Sign Up')]"
+  check_box_accept: "//span[contains (text(), 'Terms and Conditions')]"
+  login_btn: "//button[contains(text(), 'Login')]"
