--- a/src/test/python/resources/config/brands2.yml
+++ b/src/test/python/resources/config/brands2.yml
@@ -1,11 +1,9 @@
 brands:
 
-- name: 4xfx
-  config_file: 4xfx.yml
-#- name: ptbanc
-#  config_file: ptbanc.yml
-#- name: q8
-#  config_file: q8.yml
+- name: firstindex_ca
+  config_file: firstindex_ca.yml
+- name: sitalix_ca
+  config_file: sitalix_ca.yml
 
 
 
