--- a/src/test/python/resources/config/brands3.yml
+++ b/src/test/python/resources/config/brands3.yml
@@ -1,9 +1,10 @@
 brands:
 
-#- name: axa_markets
-#  config_file: axa_markets.yml
-- name: aztrades
-  config_file: aztrades.yml
+- name: firstindex_ca
+  config_file: firstindex_ca.yml
+- name: sitalix_ca
+  config_file: sitalix_ca.yml
+
 
 
 
