--- a/src/main/python/ui/crm/model/BrandsXpath/default.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/default.yml
@@ -34,3 +34,10 @@ CALoginPage:
   sign_up: "//button[contains(text(), 'Sign Up')]"
   check_box_accept: "//span[contains (text(), 'Terms and Conditions')]"
   login_btn: "//button[contains(text(), 'Login')]"
+  citizenship: "//custom-select[@name='citizenship']//span[text()='%s']"
+  submit_btn: "//button[contains (text(), 'Submit')]"
+  login_email_input: "//input[@name='login']"
+  login_btn_2: "//button[@class = 'forex-button-pandats short-button-pandats login-button-pandats'][contains(text(), 'Login')]"
+  input_first_name: "//input[@name = 'firstName']"
+  input_last_name: "//input[@name = 'lastName']"
+  input_confirm_password: "//input[@name = 'passwordConfirm']"
