--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,10 +1,15 @@
 tests_config:
+###CA
+#- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
+#  class: SignUpTest
+#  tests:
+#    - test_check_sign_up
 
   #General
-- module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
-  class: FilterModulesTest
-  tests:
-    - test_create_filter_clients_module
+#- module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
+#  class: FilterModulesTest
+#  tests:
+#    - test_create_filter_clients_module
 #    - test_create_filter_documents_module
 #    - test_create_filter_leads_module
 #    - test_create_filter_help_desk
