OF: changes by 12-18

--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,10 +1,10 @@
 brands:
 
 
-#- name: gmo_ca
-#  config_file: gmo_ca.yml
+- name: gmo_ca
+  config_file: gmo_ca.yml
 
 - name: highfx
   config_file: highfx.yml
-#- name: urf
-#  config_file: urf_financial.yml
+- name: urf
+  config_file: urf_financial.yml
