--- a/src/test/python/resources/config/brands2.yml
+++ b/src/test/python/resources/config/brands2.yml
@@ -4,5 +4,5 @@ brands:
 #  config_file: gmo.yml
 - name: oinvestsa
   config_file: oinvestsa.yml
-#- name: triomarkets
-#  config_file: triomarkets.yml
+- name: triomarkets
+  config_file: triomarkets.yml
