--- a/src/test/python/resources/config/brands3.yml
+++ b/src/test/python/resources/config/brands3.yml
@@ -2,5 +2,5 @@ brands:
 
 - name: itrader_global
   config_file: itrader_global.yml
-#- name: otcapital
-#  config_file: otcapital.yml
+- name: otcapital
+  config_file: otcapital.yml
