--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -5,7 +5,7 @@ tests_config:
   tests:
     - test_check_sign_up
 
-  General
+  ####General
 - module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
   class: FilterModulesTest
   tests:
