--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,20 +1,23 @@
 brands:
 
-- name: swiftcfd
-  config_file: swiftcfd.yml
-- name: goldenmarkets
-  config_file: goldenmarkets.yml
-- name: safemarkets
-  config_file: safemarkets.yml
+- name: optionstars
+  config_file: optionstars.yml
 
-
-
-- name: b-finance
-  config_file: b-finance.yml
-- name: eafx
-  config_file: eafx.yml
-- name: gxfx
-  config_file: gxfx.yml
+#- name: swiftcfd
+#  config_file: swiftcfd.yml
+#- name: goldenmarkets
+#  config_file: goldenmarkets.yml
+#- name: safemarkets
+#  config_file: safemarkets.yml
+#
+#
+#
+#- name: b-finance
+#  config_file: b-finance.yml
+#- name: eafx
+#  config_file: eafx.yml
+#- name: gxfx
+#  config_file: gxfx.yml
 
 
 
