NF: added changes 27-12

--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,14 +1,11 @@
 brands:
 
-- name: optionstars
-  config_file: optionstars.yml
-
-#- name: swiftcfd
-#  config_file: swiftcfd.yml
-#- name: goldenmarkets
-#  config_file: goldenmarkets.yml
-#- name: safemarkets
-#  config_file: safemarkets.yml
+- name: swiftcfd
+  config_file: swiftcfd.yml
+- name: goldenmarkets
+  config_file: goldenmarkets.yml
+- name: safemarkets
+  config_file: safemarkets.yml
 #
 #
 #
