--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,7 +1,6 @@
 brands:
-- name: triomarkets
-  config_file: triomarkets.yml
-#- name: highfx
-#  config_file: highfx.yml
+
+- name: highfx
+  config_file: highfx.yml
 #- name: urf
 #  config_file: urf_financial.yml
