OF: added changes 27-12

--- a/src/test/python/resources/config/brands8.yml
+++ b/src/test/python/resources/config/brands8.yml
@@ -1,6 +1,6 @@
 brands:
 
-- name: stoxmarket
-  config_file: stoxmarket.yml
+#- name: stoxmarket
+#  config_file: stoxmarket.yml
 - name: kbcapitals
   config_file: kbcapitals.yml
