--- a/src/test/python/resources/config/brands9.yml
+++ b/src/test/python/resources/config/brands9.yml
@@ -2,5 +2,5 @@ brands:
 
 - name: oinvestsa
   config_file: oinvestsa.yml
-- name: itrader
-  config_file: itrader.yml
+#- name: itrader
+#  config_file: itrader.yml
