--- a/src/test/python/resources/config/brands2.yml
+++ b/src/test/python/resources/config/brands2.yml
@@ -1,6 +1,6 @@
 brands:
 
-- name: gmo
-  config_file: gmo.yml
-- name: oinvestsa
-  config_file: oinvestsa.yml
+#- name: gmo
+#  config_file: gmo.yml
+#- name: oinvestsa
+#  config_file: oinvestsa.yml
