--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -12,8 +12,8 @@ brands:
 #  config_file: solocapitlas.yml
 #- name: goldenmarkets
 #  config_file: goldenmarkets.yml
-- name: safemarkets
-  config_file: safemarkets.yml
+#- name: safemarkets
+#  config_file: safemarkets.yml
 #- name: optionstars
 #  config_file: optionstars.yml
 #- name: uft
@@ -38,8 +38,8 @@ brands:
 #  config_file: bots.yml
 #- name: kontofx
 #  config_file: kontofx.yml
-#- name: xtraderfx
-#  config_file: xtraderfx.yml
+- name: xtraderfx
+  config_file: xtraderfx.yml
 #- name: firstindex
 #  config_file: firstindex.yml
 #- name: coinstec
