--- a/src/test/python/resources/config/brands4.yml
+++ b/src/test/python/resources/config/brands4.yml
@@ -2,6 +2,6 @@ brands:
 
 - name: finmarket
   config_file: finmarket.yml
-#- name: kayafx
-#  config_file: kaya_fx.yml
+- name: kayafx
+  config_file: kaya_fx.yml
 
