--- a/src/test/python/resources/config/brands6.yml
+++ b/src/test/python/resources/config/brands6.yml
@@ -2,5 +2,5 @@ brands:
 
 - name: triomarkets
   config_file: triomarkets.yml
-#- name: ogtrade
-#  config_file: ogtrade.yml
+- name: ogtrade
+  config_file: ogtrade.yml
