OF: added changes 31-12

--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,5 +1,3 @@
 brands:
-#- name: highfx
-#  config_file: highfx.yml
-- name: mlnfx
-  config_file: mlnfx.yml
+- name: highfx
+  config_file: highfx.yml
