OF: added changes 31-12

--- a/src/test/python/resources/config/brands5.yml
+++ b/src/test/python/resources/config/brands5.yml
@@ -1,7 +1,7 @@
 brands:
 
-#- name: jonesmutual
-#  config_file: jonesmutual.yml
+- name: jonesmutual
+  config_file: jonesmutual.yml
 - name: uft
   config_file: uft.yml
 - name: brokerz
