--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -2,14 +2,8 @@ brands:
 
 - name: goldenmarkets
   config_file: goldenmarkets.yml
-#- name: safemarkets
-#  config_file: safemarkets.yml
-
-#- name: b-finance
-#  config_file: b-finance.yml
-
-#- name: q8
-#  config_file: q8.yml
+- name: safemarkets
+  config_file: safemarkets.yml
 
 
 
