OF_add_CA: added changes for new tests on client area

--- a/src/main/python/ui/crm/model/BrandsXpath/default.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/default.yml
@@ -30,3 +30,20 @@ TasksPage:
   subject_button: "/html/body/app-root/tasks-list/div/div[2]/div/grid/div[2]/div/div[1]/table/tbody/tr[1]/td[3]/filters-factory/multiple-select-bs-filter/filter-multiple-select-bs/div/ss-multiselect-dropdown/div/button"
   subject_field: "/html/body/app-root/tasks-list/div/div[2]/div/grid/div[2]/div/div[1]/table/tbody/tr[1]/td[3]/filters-factory/multiple-select-bs-filter/filter-multiple-select-bs/div/ss-multiselect-dropdown/div/ul/li[1]/div/input"
   event_type: "/html/body/app-root/tasks-list/div/div[2]/div/grid/div[2]/div/div[1]/table/tbody/tr[1]/td[3]/filters-factory/multiple-select-bs-filter/filter-multiple-select-bs/div/ss-multiselect-dropdown/div/ul/li[5]/a/input"
+CALoginPage:
+  sign_up: "//*[@id='dnn_ctr517_Login_Login_DNN_registerLink']"
+  country_registr: "//select[@id = 'ddlCountries']"
+  select_country: "//*[@id='ddlCountries']/option[contains(text(), '%s')]"
+  first_name: "//*[@id='dnn_ctr480_View_txtFirstName']"
+  last_name: "//*[@id='dnn_ctr480_View_txtLastName']"
+  phone: "//input[@class = 'phone_number']"
+  password: "//*[@id='dnn_ctr480_View_txtPassword']"
+  confirm_password: "//*[@id='dnn_ctr480_View_txtConfirmPassword']"
+  terms_conditions: "//*[@id='chbAgreeWithTerms']"
+  submit: "//*[@id='btnSubmit']"
+  email: "//*[@id='dnn_ctr480_View_txtEmail']"
+  phone_area: "//input[@class = 'phone_area_code']"
+  city: "//*[@id='cty']"
+  zip_code: "//*[@id='zip']"
+  address: "//*[@id='addr1']"
+  check_box_2: "//*[@id='GDPR']"
