--- a/src/test/python/resources/config/brands5.yml
+++ b/src/test/python/resources/config/brands5.yml
@@ -1,6 +1,4 @@
 brands:
 
-- name: fm-fx
-  config_file: fm-fx.yml
-- name: mlnfx
-  config_file: mlnfx.yml
+- name: triomarkets_ca
+  config_file: triomarkets_ca.yml
