--- a/src/test/python/resources/config/brands2.yml
+++ b/src/test/python/resources/config/brands2.yml
@@ -1,8 +1,4 @@
 brands:
 
-#- name: gmo
-#  config_file: gmo.yml
-- name: oinvestsa
-  config_file: oinvestsa.yml
-#- name: triomarkets
-#  config_file: triomarkets.yml
+- name: capitalmarketbanc_ca
+  config_file: capitalmarketbanc_ca.yml
