--- a/src/test/python/resources/config/brands3.yml
+++ b/src/test/python/resources/config/brands3.yml
@@ -1,6 +1,4 @@
 brands:
 
-- name: itrader_global
-  config_file: itrader_global.yml
-#- name: otcapital
-#  config_file: otcapital.yml
+- name: itrader_ca
+  config_file: itrader_ca.yml
