--- a/src/test/python/resources/config/brands8.yml
+++ b/src/test/python/resources/config/brands8.yml
@@ -1,6 +1,3 @@
 brands:
-
-- name: stoxmarket
-  config_file: stoxmarket.yml
-- name: kbcapitals
-  config_file: kbcapitals.yml
+- name: itraderglob_ca
+  config_file: itraderglob_ca.yml
